--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Italo Calvino Tribute</title>
-  <link rel="stylesheet" href="/css/futura/style.css">
+  <link rel="stylesheet" href="css/futura/style.css">
 </head>
 <body>
 
