--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         
         <div class="image">
-          <img src="img/libro.png"Italo Calvino Book">
+          <img src="img/libri-italo.png "Italo Calvino Book">
         </div>
       </div>
       <div class="content-item">
@@ -51,7 +51,7 @@
           <p>Jack Smyth, grafico irlandese, è stato scelto per la sua esperienza e passione per Calvino. Crea copertine eleganti, narrative e adatte a un pubblico giovane. Ogni copertina doveva riflettere l’essenza profonda e giocosa delle opere di Calvino, senza riassumere la trama.</p>
         </div>
         <div class="image">
-          <img src="img/jack-smyth.png"Designer Image">
+          <img src="img/designer.jpg"Designer Image">
         </div>
       </div>
       <div class="content-item">
@@ -61,7 +61,7 @@
           <p>Ogni copertina ha due colori predominanti, più bianco e nero, per garantire visibilità e coerenza visiva tra i 33 libri. Le copertine definitive sono state frutto di un ragionamento collettivo, e sono state sottoposte all'amministratore delegato di Mondadori Libri, Enrico Selva Coddè, e a Giovanna Calvino, figlia dello scrittore, che ha approvato ogni copertura prima della stampa. </p>
         </div>
         <div class="image">
-          <img src="img/calvino-alzato.png" alt="Challenge Image">
+          <img src="img/italo-mano.jpg" alt="Challenge Image">
         </div>
       </div>
     </section>
